--- a/_deploy/site/pages/index.html
+++ b/_deploy/site/pages/index.html
@@ -2,10 +2,13 @@
     <html lang="en">
     <head>
         <title>Some</title>
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="../../resources/css/screen.css">
+        <link rel="stylesheet" href="../../resources/css/materialize.css">
     </head>
     <body>
-    
+
+        
 <header>
     <div class="content">
         <hgroup>
@@ -19,13 +22,29 @@
 </header>
 <section class="site">
     <nav>
-        <a href="#">Page</a>
-        <a href="#">Page</a>
-        <a href="#">Page</a>
-        <a href="#">Page</a>
-        <a href="#">Page</a>
-    </nav>
-    <blockquote>
+        <div class="nav-wrapper">
+            <form>
+                <ul class="center hide-on-small-only">
+                    <li>
+                        <div class="input-field">
+                            <input placeholder="Deine Email" type="email" id="email" name="email" class="validate">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="input-field">
+                            <input placeholder="Passwort" type="password" id="password" name="password" class="validate">
+                        </div>
+                    </li>
+                    <li>
+                        <button class="btn waves-effect waves-light" type="submit" name="action">
+                            Einloggen
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </li>
+                </ul>
+            </form>
+        </div>
+    </nav>    <blockquote>
         <img src="http://d.gr-assets.com/authors/1397426898p5/203714.jpg" align="left" >“I invented nothing new. I simply assembled the discoveries of other men behind whom were centuries of work. Had I worked fifty or ten or even five years before, I would have failed. So it is with every new thing. Progress happens when all the factors that make for it are ready, and then it is inevitable. To teach that a comparatively few men are responsible for the greatest forward steps of mankind is the worst sort of nonsense.”
 
 
@@ -34,6 +53,7 @@
 </section>
 
         <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
         <script src="../../resources/js/home_js/header.js"></script>
     </body>
 </html>
