404 Seite eingefügt und Patreontext eingefügt

--- a/_deploy/site/pages/index.html
+++ b/_deploy/site/pages/index.html
@@ -47,8 +47,8 @@
     </div>
 </header><nav class="red darken-3 z-depth-2">
     <div class="nav-wrapper">
-        <a class="brand-logo left hide-on-med-and-down" href="#!">Some - DER Soziale Messenger</a>
-        <a class="brand-logo center hide-on-large-only" href="#!">Some - DER Soziale Messenger</a>
+        <a class="brand-logo left hide-on-med-and-down" href="index.html">Some - DER Soziale Messenger</a>
+        <a class="brand-logo center hide-on-large-only" href="index.html">Some - DER Soziale Messenger</a>
         <form class="hide-on-med-and-down">
             <ul class="right hide-on-small-only">
                 <li>
