--- a/_deploy/site/pages/about.html
+++ b/_deploy/site/pages/about.html
@@ -1,4 +1,31 @@
-<div class="section container">
+<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Über Some</title>
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="../../resources/css/screen.css">
+        <link rel="stylesheet" href="../../resources/css/materialize.css">
+    </head>
+    <body>
+
+        
+<header>
+    <div class="content">
+        <hgroup>
+            <h1>Some</h1>
+            <i>The Social Messenger</i>
+        </hgroup>
+    </div>
+    <div class="overlay">
+
+    </div>
+</header><nav class="red darken-3 z-depth-2">
+    <div class="nav-wrapper">
+        <a class="brand-logo center" href="/">Some - DER Soziale Messenger</a>
+    </div>
+</nav><div class="section container">
     <h2 class="header">Über Some</h2>
     <p class="grey-text text-darken-3">Hinter Some stecken einige junge Entwickler, angeführt von einem Visionär. Die Vision: Ein sozialer Messenger!</p>
     <p class="gray-text text-darken-3">Mit der Zeit und der Nutzung von vielen etablierten Messengern und verschiedenen sozialen Netzwerken staut sich eine Menge an Unzufriedenheit an. Sei es die allgegenwärtige Werbung der heutigen Zeit, die immer intelligenter wird und die neuesten Anzeigen-Blocker überlisten kann, oder das frustrierende Gefühl, welches entsteht, wenn man eigentlich alle Spiele-Benachrichtigungen von Freunden erfolgreich abbestellt hat und aus dem Nichts einfach ein neues Spiel auftaucht. Nur eine Person in deiner Kontaktliste klickt ein mal zu viel und der Frust ist groß. Hinzu kommt für eine nicht zu verachtende Anzahl an Mitmenschen das Problem des "Fortschrittes": Das Handy ist zu alt für die aktuelle Version des Lieblingsmessengers und man hat eigentlich nicht die Ressourcen schnell mit dem Neukauf eines aktuelleren Smartphones zu reagieren.</p>
@@ -6,4 +33,41 @@
     <p class="gray-text text-darken-3">Some bündelt dabei die wichtigen Funktionen, die etwas, was sich Sozialer Messenger nennt, haben sollte: Chats mit einer oder mehreren Personen, Dateitransfer, Videotelefonie, das Teilen von Beiträgen mit ausgewählter Reichweite<span class="grey-text lighten-4">*</span> - erfahre es am besten selbst!</p>
     <p class="gray-text text-darken-3">Bevor Du uns jedoch wie die neue Super-Abnehm-Frucht, die garantiert nach nur einer Woche erfolgversprechende Singleplattform oder die App, die dir bis zu 150€ pro Stunde für's Nichtstun bezahlt, einfach wieder wegklickst, empfehlen wir Dir, es einfach mal auszuprobieren. Ohne Handynummer oder versteckte Ortungsdienste - und dein Profil kannst du jederzeit vollständig löschen!</p>
     <h6 class="grey-text lighten-2 ">* Manche der hier angekündigten Funktionen sind noch nicht in der aktuellen Version von Some inbegriffen, da Some noch in der Entwicklung ist.</h6>
-</div>
+</div><footer class="page-footer red darken-3">
+    <div class="container">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Some</h5>
+                <p class="grey-text text-lighten-4">Some ist ein junger Sozialer Messenger, der Seinesgleichen sucht.</p>
+            </div>
+            <div class="col l5 offset-l1 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                    <li><a class="grey-text text-lighten-3" href="about.html">Über Some</a></li>
+                    <li><a class="grey-text text-lighten-3" href="contact.html">Kontaktieren Sie die Entwickler</a></li>
+                    <li><a class="grey-text text-lighten-3" href="patreon.html">Die Unterstützer</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container">
+            © 2016 Copyright Some
+            <a class="grey-text text-lighten-4 right" href="imprint.html">Impressum</a>
+        </div>
+    </div>
+</footer>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+        <script src="../../resources/js/home_js/header.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('.datepicker').pickadate({
+                    selectMonths: true, // Creates a dropdown to control month
+                    selectYears: 200 // Creates a dropdown of 15 years to control year
+                });
+                $('.modal').modal();
+            });
+        </script>
+    </body>
+</html>
