--- a/_deploy/site/pages/imprint.html
+++ b/_deploy/site/pages/imprint.html
@@ -1,4 +1,31 @@
-<div class="section container">
+<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Impressum</title>
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="../../resources/css/screen.css">
+        <link rel="stylesheet" href="../../resources/css/materialize.css">
+    </head>
+    <body>
+
+        
+<header>
+    <div class="content">
+        <hgroup>
+            <h1>Some</h1>
+            <i>The Social Messenger</i>
+        </hgroup>
+    </div>
+    <div class="overlay">
+
+    </div>
+</header><nav class="red darken-3 z-depth-2">
+    <div class="nav-wrapper">
+        <a class="brand-logo center" href="/">Some - DER Soziale Messenger</a>
+    </div>
+</nav><div class="section container">
     <ul class="collection with-header">
         <li class="collection-header">
             Impressum
@@ -125,4 +152,41 @@
             </ul>
         </li>
     </ul>
-</div>
+</div><footer class="page-footer red darken-3">
+    <div class="container">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Some</h5>
+                <p class="grey-text text-lighten-4">Some ist ein junger Sozialer Messenger, der Seinesgleichen sucht.</p>
+            </div>
+            <div class="col l5 offset-l1 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                    <li><a class="grey-text text-lighten-3" href="about.html">Über Some</a></li>
+                    <li><a class="grey-text text-lighten-3" href="contact.html">Kontaktieren Sie die Entwickler</a></li>
+                    <li><a class="grey-text text-lighten-3" href="patreon.html">Die Unterstützer</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container">
+            © 2016 Copyright Some
+            <a class="grey-text text-lighten-4 right" href="imprint.html">Impressum</a>
+        </div>
+    </div>
+</footer>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+        <script src="../../resources/js/home_js/header.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('.datepicker').pickadate({
+                    selectMonths: true, // Creates a dropdown to control month
+                    selectYears: 200 // Creates a dropdown of 15 years to control year
+                });
+                $('.modal').modal();
+            });
+        </script>
+    </body>
+</html>
